[project]
name = "make-chapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.26.0",
    "pydantic-settings[yaml]>=2.13.1",
    "pydantic-settings-yaml>=0.2.0",
    "pyyaml>=6.0.3",
    "tiktoken>=0.12.0",
]
